--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
   font-size: 16px;
   line-height: 1.5;
 }
+:root {
+    --gold: 0%;
+    --white: 0%;
+}
+
 html {
   height: 100%;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -41,11 +46,13 @@ button {
 }
 
 main {
-  border: 5px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-image: linear-gradient(.25turn, gold var(--gold), white var(--white));
 }
+
 .counter {
   font-size: 5rem;
 }
